# seattle_airbnb_insights-text-sentiment-and-price-prediction

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
code/: Exploratory Analysis Problem 1.ipynb  Exploratory Analysis Problem 2.ipynb  Exploratory Analysis Problem 3.ipynb
code/catboost_info/: catboost_training.json  time_left.tsv
code/catboost_info/learn/: events.out.tfevents
