[project]
name = "airbnb-seattle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.8.0",
    "catboost>=1.2.8",
    "graphviz>=0.21",
    "ipywidgets>=8.1.7",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "treeinterpreter>=0.2.3",
    "wordcloud>=1.9.4",
    "xgboost>=3.1.1",
]
